Mon Nov  3 10:17:19 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcs.c (RCS_rewrite): Don't write the file if noexec.
	* sanity.sh (basica, branches): Test for this.

Sat Nov  1 10:01:56 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcs.h (struct deltatext): Comment text and log fields.

	* admin.c (admin_fileproc): Call RCS_reparsercsfile not
	RCS_fully_parse.  Don't muck with ->other field in RCSVers (it
	doesn't need to be set).
	* rcs.h, rcs.c (RCS_reparsercsfile): No longer static.  No point
	in having this static when RCS_rewrite and RCS_fully_parse are not.
	* rcs.c (getdelta): Remove obsolete comment about not storing the
	newphrases from the deltas, since we now do.

Sat Nov  1 10:01:56 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
			  and Paul Eggert

	* rcs.c (rcs_internal_lockfile): Clarify the comments about O_EXCL
	and such matters.

Sat Nov  1 10:01:56 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcs.c (RCS_delete_revs): Pass force_tag_match to RCS_settag.
	* sanity.sh (basica-o2a, basica-o2b): Test for this.

1997-11-01  Peter Brandstrom  <d91-pbr@nada.kth.se>

	* sanity.sh: Use ${username} more places.

Sat Nov  1 00:14:00 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcs.c (rcs_internal_lockfile): Add comments about what we are
	trying to accomplish here (versus what RCS tries to accomplish).

	* rcs.c (RCS_parsercsfile_i): Clarify/expand comment about
	the purpose of having both this and RCS_reparsercsfile.
	(RCS_rewrite): Add comment about how this works.

	* admin.c (admin_fileproc): Add comment about call to
	RCS_fully_parse not RCS_reparsercsfile.
	* rcs.h: Comment on what delta_pos field of struct rcsnode is.

Fri Oct 31 16:38:39 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
			  and Abe Feldman

	* client.c (update_entries): If UTIME_EXPECTS_WRITABLE, if
	necessary change the file to be writable temporarily to set its
	modification time.

Thu Oct 30 17:42:59 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
