@@ -1,3 +1,9 @@
+Tue Nov  4 12:19:28 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
+
+	* admin.c (admin): Take out writelocks not readlocks.  This has
+	been a bug "forever", but may become more noticeable with
+	rcs_internal_lockfile relying on the writelocks.
+
 Mon Nov  3 10:17:19 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
 
 	* rcs.c (RCS_rewrite): Don't write the file if noexec.
